packages/raystack/components/button/button.module.css
/* ... */
.button:focus-visible {
  outline: 1px solid var(--rs-color-border-accent-emphasis);
}

.button:focus {
  outline: none;
}

.button:before,
.button:after {
  box-sizing: border-box;
}

.button:disabled,
.button-disabled {
  opacity: 0.5;
  pointer-events: initial;
  cursor: not-allowed;
}

.button:disabled:hover,
.button-disabled:hover {
  color: inherit;
}

.button-small {
  padding: var(--rs-space-2) var(--rs-space-3);
  font-size: var(--rs-font-size-mini);
  line-height: var(--rs-line-height-mini);
  letter-spacing: var(--rs-letter-spacing-mini);
}

.button-normal {
  padding: var(--rs-space-3) var(--rs-space-4);
  font-size: var(--rs-font-size-small);
  line-height: var(--rs-line-height-small);
  letter-spacing: var(--rs-letter-spacing-small);
}

.button-solid {
  color: var(--rs-color-foreground-accent-emphasis);
  background-color: var(--rs-color-background-accent-emphasis);
}

.button-solid:hover,
.button-solid:active {
  background-color: var(--rs-color-background-accent-emphasis-hover);
}

.button-solid.button-disabled:hover,
.button-solid.button-disabled:active {
  color: var(--rs-color-foreground-accent-emphasis);
  background-color: var(--rs-color-background-accent-emphasis);
}

.button-solid.button-loading:hover,
.button-solid.button-loading:active {
  background-color: var(--rs-color-background-accent-emphasis);
}

.button-outline {
  background-color: var(--rs-color-background-base-primary);
  color: var(--rs-color-foreground-accent-primary);
  border: 0.5px solid var(--rs-color-border-accent-emphasis);
}

.button-outline:hover {
  background-color: var(--rs-color-background-accent-primary);
  border-color: var(--rs-color-border-accent-emphasis);
}

.button-outline:active {
  background-color: var(--rs-color-background-accent-emphasis);
  color: var(--rs-color-foreground-accent-emphasis);
  border-color: var(--rs-color-border-accent-emphasis);
}

.button-outline:disabled,
.button-outline.button-disabled {
  opacity: 0.5;
  background-color: transparent;
  cursor: not-allowed;
}

.button-outline:disabled:hover,
.button-outline.button-disabled:hover,
.button-outline:disabled:active,
.button-outline.button-disabled:active {
  background-color: transparent;
  color: var(--rs-color-foreground-accent-primary);
  border-color: var(--rs-color-border-accent-emphasis);
}

.button-outline.button-loading:hover,
.button-outline.button-loading:active {
  background-color: transparent;
  color: var(--rs-color-foreground-accent-primary);
  border-color: var(--rs-color-border-accent-primary);
}

.button-outline-accent.button-loading:hover {
  background-color: transparent;
  border-color: var(--rs-color-border-accent-emphasis);
  color: var(--rs-color-foreground-accent-primary);
}

.button-outline-danger.button-loading:hover {
  background-color: transparent;
  border-color: var(--rs-color-border-danger-emphasis);
  color: var(--rs-color-foreground-danger-primary);
}

.button-outline-neutral.button-loading:hover {
  background-color: var(--rs-color-background-base-primary);
  border-color: var(--rs-color-border-base-tertiary);
  color: var(--rs-color-foreground-base-primary);
}

.button-outline-success.button-loading:hover {
  background-color: transparent;
  border-color: var(--rs-color-border-success-emphasis);
  color: var(--rs-color-foreground-success-primary);
}

.button-ghost {
  color: var(--rs-color-foreground-base-primary);
  background-color: transparent;
  border: 1px dashed var(--rs-color-border-base-primary);
}

.button-ghost:hover,
.button-ghost:active {
  background-color: var(--rs-color-background-base-primary-hover);
}

.button-ghost:disabled,
.button-ghost.button-disabled {
  opacity: 0.5;
}

.button-ghost:disabled:hover,
.button-ghost.button-disabled:hover,
.button-ghost:disabled:active,
.button-ghost.button-disabled:active {
  color: var(--rs-color-foreground-base-primary);
  background-color: transparent;
  border-color: var(--rs-color-border-base-primary);
}

.button-ghost.button-loading:hover,
.button-ghost.button-loading:active {
  background-color: transparent;
  border-color: var(--rs-color-border-base-primary);
}

.button-text {
  color: var(--rs-color-foreground-base-primary);
  background-color: transparent;
}

.button-text:hover,
.button-text:active {
  background-color: var(--rs-color-background-base-primary-hover);
}

.button-text:disabled,
.button-text.button-disabled {
  opacity: 0.5;
}

.button-text.button-loading:hover,
.button-text.button-loading:active {
  background-color: transparent;
}

.button-text:disabled:hover,
.button-text.button-disabled:hover,
.button-text:disabled:active,
.button-text.button-disabled:active {
  color: var(--rs-color-foreground-base-primary);
  background-color: transparent;
}

.button-loading {
  display: flex;
  align-items: center;
}

.button-loading:hover,
.button-loading:active {
  background-color: inherit;
}

@media (prefers-reduced-motion: no-preference) {
  .button {
    transition: all 0.2s ease-in-out;
  }
}

.loader-text {
  margin-left: var(--rs-space-3);
}

.loader-only-button-small {
  padding: var(--rs-space-2) var(--rs-space-6);
}

.loader-only-button-normal {
  padding: var(--rs-space-3) var(--rs-space-8);
}

.icon {
  display: flex;
  align-items: center;
  justify-content: center;
}

.icon-leading {
  margin-right: var(--rs-space-3);
}

.icon-trailing {
  margin-left: var(--rs-space-3);
}

/* Solid variant colors */
.button-solid-accent {
  background-color: var(--rs-color-background-accent-emphasis);
  color: var(--rs-color-foreground-accent-emphasis);
}

.button-solid-accent:hover {
  background-color: var(--rs-color-background-accent-emphasis-hover);
}

.button-solid-accent:active {
  background-color: var(--rs-color-background-accent-emphasis-hover);
}

.button-solid-danger {
  background-color: var(--rs-color-background-danger-emphasis);
  color: var(--rs-color-foreground-danger-emphasis);
}

.button-solid-danger:hover {
  background-color: var(--rs-color-background-danger-emphasis-hover);
}
/* ... */

